# libSBOL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _biosystem_design_example_8cpp.html  _biosystem_design_example_8cpp__incl.map  _biosystem_design_example_8cpp__incl.md5  _c_r_i_s_p_r_repression_example_8cpp.html  _c_r_i_s_p_r_repression_example_8cpp__incl.map  _c_r_i_s_p_r_repression_example_8cpp__incl.md5  _sequence_assembly_example_8cpp.html  _sequence_assembly_example_8cpp__incl.map  _sequence_assembly_example_8cpp__incl.md5  annotated.html  assembly_8cpp.html  assembly_8cpp__incl.dot  assembly_8cpp__incl.map  assembly_8cpp__incl.md5  assembly_8h.html  assembly_8h__dep__incl.dot  assembly_8h__dep__incl.map  assembly_8h__dep__incl.md5  assembly_8h__incl.dot  assembly_8h__incl.map  assembly_8h__incl.md5  attachment_8h.html  attachment_8h__dep__incl.dot  attachment_8h__dep__incl.map  attachment_8h__dep__incl.md5  attachment_8h__incl.dot  attachment_8h__incl.map  attachment_8h__incl.md5  build-restbed.sh  classes.html  classsbol_1_1_activity-members.html  classsbol_1_1_activity.html  classsbol_1_1_activity__inherit__graph.dot  classsbol_1_1_activity__inherit__graph.map  classsbol_1_1_activity__inherit__graph.md5  (+942 more)
_source/: CMakeLists.txt  array.h  collection.c  collection.h  constants.h  constants.h.in  dnacomponent.c  document.c  document.h  documentedobject.c  identifiedobject.c  identifiedobject.h  object.c  object.h  property.c  property.h  sboldocument.c  sequenceannotation.c  sequenceannotation.h  toplevel.c  toplevelobject.c  toplevelobject.h  utilities.c  writer.c  writer.h
example/: BiosystemDesignExample.cpp  CMakeLists.txt  CRISPRRepressionExample.cpp  CRISPR_example.xml  README.md  SequenceAssemblyExample.cpp
example/Xcode/example/: main.cpp
example/Xcode/example.xcodeproj/: project.pbxproj
html/: annotated.html  assembly_8cpp.html  assembly_8h.html  classes.html  classsbol_1_1_activity-members.html  classsbol_1_1_activity.html  classsbol_1_1_agent-members.html  classsbol_1_1_agent.html  classsbol_1_1_association-members.html  classsbol_1_1_association.html  classsbol_1_1_association__inherit__graph.md5  classsbol_1_1_collection-members.html  classsbol_1_1_collection.html  classsbol_1_1_combinatorial_derivation-members.html  classsbol_1_1_combinatorial_derivation.html  classsbol_1_1_component-members.html  classsbol_1_1_component.html  classsbol_1_1_component_definition-members.html  classsbol_1_1_component_definition.html  classsbol_1_1_component_definition__inherit__graph.map  classsbol_1_1_component_definition__inherit__graph.md5  classsbol_1_1_config-members.html  classsbol_1_1_config.html  classsbol_1_1_cut-members.html  classsbol_1_1_cut.html  classsbol_1_1_date_time_property-members.html  classsbol_1_1_date_time_property.html  classsbol_1_1_document-members.html  classsbol_1_1_document.html  classsbol_1_1_functional_component-members.html  classsbol_1_1_functional_component.html  classsbol_1_1_generic_location-members.html  classsbol_1_1_generic_location.html  classsbol_1_1_identified-members.html  classsbol_1_1_identified.html  classsbol_1_1_int_property-members.html  (+158 more)
manual/: Doxyfile  (+18 more)
source/: CMakeLists.txt  Makefile  PtrWrapper.hh  RasqalDataGraph.cc  RasqalDataGraph.hh  RasqalQueryResults.cc  RasqalQueryResults.hh  SharedPtrWrapper.hh  a.txt  array.c  assembly.cpp  assembly.h  attachment.h  cmake_install.cmake  collection.h  combinatorialderivation.h  component.h  componentdefinition.cpp  componentdefinition.h  config.cpp  config.h  constants.h  constants.h.in  dblt.cpp  dblt.h  dbtl.cpp  dbtl.h  dnacomponent.h  dnasequence.c  dnasequence.h  document.cpp  document.h  documented.cpp  documented.h  documentedobject.c  documentedobject.h  experiment.h  generictoplevel.h  hello_sbol.cpp  host.h  (+57 more)
source/SBOL.build/Debug/sbol.build/: dgph  dgph~
source/SBOL.build/Debug/sbol.build/Objects-normal/x86_64/: sbol.LinkFileList
source/libxml2/: CMakeLists.txt  Makefile  cmake_install.cmake
source/libxml2/python/: Makefile.in
source/libxml2/win32/: config.mingw
source/libxml2/xstc/: Makefile.in
source/raptor/: CMakeLists.txt  FindBoost.bak  FindBoost.cmake  FindCURL.bak  FindCURL.cmake  FindJsonCpp.cmake  FindLibXslt.bak  FindLibXslt.cmake  FindPythonLibs.cmake  FindRAPTOR.bak  FindRAPTOR.cmake  FindRASQAL.cmake  Makefile  cmake_install.cmake
source/raptor/include/raptor2/: raptor2.h
source/raptor/lib/: jsoncpp_64.lib  libiconv-static_64.lib  raptor2.lib  raptor2_64.lib
source/raptor/lib/cmake/: Raptor2Config-debug.cmake  Raptor2Config-release.cmake  Raptor2Config.cmake
source/raptor/lib/pkgconfig/: raptor2.pc
source/raptor/lib/x64/: libz.lib  raptor2.lib
source/raptor/lib/x86/: jsoncpp.lib  libiconv.lib  libz.lib
source/raptor/linux/jsoncpp/include/json/: json.h  reader.h
source/raptor/linux/libxml2/include/libxml2/libxml/: xmlversion.h
source/raptor/linux/libxslt/include/libxslt/: xsltconfig.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadWriteTestlibSBOL.cpp  ReadWriteTestlibSBOL.sh  cmake_install.cmake  dirent.c  log.txt  sbol_test  test.cpp
test/invalid/: sbol-10102.rdf  sbol-10103.rdf  sbol-10201.rdf  sbol-10202.rdf  sbol-10203.rdf  sbol-10204.rdf  sbol-10206.rdf  sbol-10208.rdf  sbol-10209.rdf  sbol-10210.rdf  sbol-10211.rdf  sbol-10212.rdf  sbol-10213.rdf  sbol-10214.rdf  sbol-10215.rdf  sbol-10216.rdf  sbol-10510.rdf  sbol-10512.rdf  sbol-10513.rdf  sbol-10516.rdf  sbol-10518.rdf  sbol-10519.rdf  sbol-10524.rdf  sbol-10602.rdf  sbol-10603.rdf  sbol-10604.rdf  sbol-10606.rdf  sbol-10607.rdf  sbol-10802.rdf  sbol-10805.rdf  sbol-10809.rdf  sbol-10810.rdf  sbol-10811.rdf  sbol-11104.rdf  sbol-11404.rdf  sbol-11406.rdf  sbol-11407.rdf  sbol-11606.rdf  sbol-11702.rdf  sbol-12002.rdf  (+4 more)
test/valid/: new_AnnotationOutput.rdf  sampleToggleSwitch.rdf
wrapper/: CMakeLists.txt  CRISPR_example.py  FindPythonLibs.cmake  __init__.py  assembly_example.py  cmake_install.cmake  libsbol.i  python_docs.i  sbol.pth  sbol.py  setup.py  test.i  test_assembly.py  unit_tests.py
wrapper/sbol/: test.xml  unit_tests.py
(+442 files in other folders)
